<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceScreen
        android:title="@string/title_activity_settings_account">
        <PreferenceCategory
            android:title="@string/title_account_preferences_user">
            <EditTextPreference
                android:title="@string/item_account_username"
                android:summary="@string/summary_account_username"/>
            <EditTextPreference
                android:title="@string/item_account_degree"
                android:summary="@string/summary_account_username"/>
            <EditTextPreference
                android:title="@string/item_account_major"
                android:summary="@string/summary_account_username"/>
            <EditTextPreference
                android:title="@string/item_account_institution"
                android:summary="@string/summary_account_username"/>
        </PreferenceCategory>
        <PreferenceCategory
            android:title="@string/title_account_preferences_other">
            <CheckBoxPreference
                android:title="@string/item_account_autosync"
                android:summary="@string/summary_account_autosync"/>
            <Preference
                android:title="@string/item_account_donor_status"
                android:summary="@string/summary_account_donor_status"/>
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:title="@string/title_activity_settings_notification">
        <PreferenceCategory
            android:title="@string/title_notifications_preferences">
            <CheckBoxPreference
                android:title="@string/item_notifications_global_allow"
                android:summary="@string/summary_notifications_global_allow"/>
            <CheckBoxPreference
                android:title="@string/item_notifications_class"
                android:summary="@string/summary_notifications_class"/>
            <CheckBoxPreference
                android:title="@string/item_notifications_assessment"
                android:summary="@string/summary_notifications_assessment"/>
            <CheckBoxPreference
                android:title="@string/item_notifications_review"
                android:summary="@string/summary_notifications_review"/>
            <CheckBoxPreference
                android:title="@string/item_notifications_personal"
                android:summary="@string/summary_notifications_personal"/>
            <CheckBoxPreference
                android:title="@string/item_notifications_lockscreen"
                android:summary="@string/summary_notifications_lockscreen"/>
            <CheckBoxPreference
                android:title="@string/item_notifications_statusbar"
                android:summary="@string/summary_notifications_statusbar"/>
            <CheckBoxPreference
                android:title="@string/item_notifications_threshold"
                android:summary="@string/summary_notifications_threshold"/>
            <CheckBoxPreference
                android:title="@string/item_notifications_scope"
                android:summary="@string/summary_notifications_scope"/>
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:title="@string/title_activity_settings_course">
        <PreferenceCategory
            android:title="@string/title_course_preferences">
            <CheckBoxPreference
                android:title="@string/item_course_colour"
                android:summary="@string/summary_course_colour"/>
            <CheckBoxPreference
                android:title="@string/item_account_degree"
                android:summary="@string/summary_account_degree"/>
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:title="@string/title_activity_settings_srs">>
        <PreferenceCategory
            android:title="@string/title_srs_preferences">
            <CheckBoxPreference
                android:title="@string/item_srs_frequency"
                android:summary="@string/summary_srs_frequency"/>
            <CheckBoxPreference
                android:title="@string/item_srs_vacation_mode"
                android:summary="@string/summary_srs_vacation_mode"/>
            <CheckBoxPreference
                android:title="@string/item_srs_review_timing"
                android:summary="@string/summary_srs_review_timing"/>
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:title="@string/title_activity_settings_miscellaneous">
        <PreferenceCategory
            android:title="@string/title_miscellaneous_preferences_colour"
            android:summary="@string/summary_colour_preference">
            <com.rarepebble.colorpicker.ColorPreference
                android:key="toolbarColourPreference"
                android:title="@string/item_colour_preference_toolbar"
                app:colorpicker_showAlpha="false"
                app:colorpicker_defaultColor="#000000" />
            <com.rarepebble.colorpicker.ColorPreference
                android:key="courseColourPreference"
                android:title="@string/item_colour_preference_courses"
                app:colorpicker_showAlpha="false"
                app:colorpicker_defaultColor="#000000" />
            <com.rarepebble.colorpicker.ColorPreference
                android:key="reviewColourPreference"
                android:title="@string/item_colour_preference_review"
                app:colorpicker_showAlpha="false"
                app:colorpicker_defaultColor="#000000" />
            <com.rarepebble.colorpicker.ColorPreference
                android:key="timetableColourPreference"
                android:title="@string/item_colour_preference_timetable"
                app:colorpicker_showAlpha="false"
                app:colorpicker_defaultColor="#000000" />
            <com.rarepebble.colorpicker.ColorPreference
                android:key="assessmentColourPreference"
                android:title="@string/item_colour_preference_assessments"
                app:colorpicker_showAlpha="false"
                app:colorpicker_defaultColor="#000000" />
        </PreferenceCategory>
        <PreferenceCategory
            android:title="@string/title_miscellaneous_preferences_other">
            <CheckBoxPreference
                android:title="@string/item_other_preference_silent_session"
                android:summary="@string/summary_silent_session"/>
            <CheckBoxPreference
                android:title="@string/item_other_preference_locked_session"
                android:summary="@string/summary_locked_session"/>
            <CheckBoxPreference
                android:title="@string/item_other_preference_screen_activity"
                android:summary="@string/summary_screen_activity"/>
        </PreferenceCategory>
    </PreferenceScreen>
</PreferenceScreen>