<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    android:title="@string/title_activity_settings_miscellaneous"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">>
    <PreferenceCategory
        android:title="@string/title_miscellaneous_preferences_colour"
        android:summary="@string/summary_colour_preference">
        <ListPreference
            android:key="preferenceMiscellaneousChosenTheme"
            android:title="@string/item_colour_preference_theme"
            android:entries="@array/settings_miscellaneous_custom_themes"
            android:entryValues="@array/settings_miscellaneous_custom_themes"
            android:dialogTitle="@string/item_colour_preference_theme_choose"
            android:summary="%s"
        />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/title_miscellaneous_preferences_other">
        <CheckBoxPreference
            android:key="preferenceMiscellaneousSilent"
            android:title="@string/item_other_preference_silent_session"
            android:summary="@string/summary_silent_session"/>
        <CheckBoxPreference
            android:key="preferenceMiscellaneousLocked"
            android:title="@string/item_other_preference_locked_session"
            android:summary="@string/summary_locked_session"/>
        <CheckBoxPreference
            android:key="preferenceMiscellaneousScreen"
            android:title="@string/item_other_preference_screen_activity"
            android:summary="@string/summary_screen_activity"/>
    </PreferenceCategory>
</PreferenceScreen>