<?xml version="1.0" encoding="utf-8"?>
<preference-headers
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFFFFF">
    <header
        android:fragment="com.example.takai.study_project.SettingsFragment"
        android:title="@string/title_activity_settings_account"
        android:summary="@string/summary_account_settings">
        <extra android:name="settings" android:value="account" />
    </header>
    <header
        android:fragment="com.example.takai.study_project.SettingsFragment"
        android:title="@string/title_activity_settings_notification"
        android:summary="@string/summary_notifications_settings">
        <extra android:name="settings" android:value="notifications" />
    </header>
    <header
        android:fragment="com.example.takai.study_project.SettingsFragment"
        android:title="@string/title_activity_settings_course"
        android:summary="@string/summary_course_settings">
        <extra android:name="settings" android:value="course" />
    </header>
    <header
        android:fragment="com.example.takai.study_project.SettingsFragment"
        android:title="@string/title_activity_settings_srs"
        android:summary="@string/summary_srs_settings">
        <extra android:name="settings" android:value="srs" />
    </header>
    <header
        android:fragment="com.example.takai.study_project.SettingsFragment"
        android:title="@string/title_activity_settings_miscellaneous"
        android:summary="@string/summary_miscellaneous_settings">
        <extra android:name="settings" android:value="miscellaneous" />
    </header>
</preference-headers>